ajuste bobo en el head que se me paso

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
   <meta property="og:title" content="Compra tus entradas del Made In Iron Metal Fest XII • Spectral Tales" />
   <meta property="og:description" content="Prepárate para el festival de metal más épico del año! Made In Iron Metal Fest XII te espera con un cartel de 16 bandas de metal legendarias y emergentes, camping, piscina y mucho más en Chinauta, Colombia. Compra tus entradas ahora" />
   <meta property="og:url" content="https://spectraltales.co/" />
-  <meta property="og:image" content="https://malditogenio.github.io/spectral-tales-event-promo/images/og-spectral-party-metal.png />
-  <meta property="og:image:secure_url" content="https://malditogenio.github.io/spectral-tales-event-promo/images/og-spectral-party-metal.png />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta property="og:image" content="https://malditogenio.github.io/spectral-tales-event-promo/images/og-spectral-party-metal.png" />
 </head>
 <body>
 <main id="hero">  
