--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Compra tus entradas del Made In Iron Metal Fest XII • Spectral Tales</title>
+  <title>Made In Iron Metal Fest XII • Spectral Tales</title>
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
@@ -10,7 +10,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
   <meta name="theme-color" content="#000"/>
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Compra tus entradas del Made In Iron Metal Fest XII • Spectral Tales" />
+  <meta property="og:title" content="Made In Iron Metal Fest XII • Spectral Tales" />
   <meta property="og:description" content="Prepárate para el festival de metal más épico del año! Made In Iron Metal Fest XII te espera con un cartel de 16 bandas de metal legendarias y emergentes, camping, piscina y mucho más en Chinauta, Colombia. Compra tus entradas ahora" />
   <meta property="og:url" content="https://spectraltales.co/" />
   <meta property="og:image" content="https://malditogenio.github.io/spectral-tales-event-promo/images/og-spectral-party-metal.png" />
