--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="col">
             <div class="card mb-4 rounded-2 shadow-sm border-primary">
               <div class="card-header py-3 text-white bg-primary border-primary">
-                <h4 class="my-0 fw-normal">Tickt Demoniaco</h4>
+                <h4 class="my-0 fw-normal">Ticket Demoniaco</h4>
               </div>
               <div class="card-body">
                 <h3 class="card-title pricing-card-title">$175.000<small class="text-muted fw-light">/ticket</small></h3>
