--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="col">
             <div class="card mb-4 rounded-2 shadow-sm border-primary">
               <div class="card-header py-3 text-white bg-primary border-primary">
-                <h4 class="my-0 fw-normal">Ticket Demoniaco</h4>
+                <h4 class="my-0 fw-normal">Ticket Demoníaco</h4>
               </div>
               <div class="card-body">
                 <h3 class="card-title pricing-card-title">$175.000<small class="text-muted fw-light">/ticket</small></h3>
@@ -138,7 +138,7 @@
                   <li>(1) CD compilado bandas del festival</li>
                 </ul>
     
-                <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-dos">Quiero el ticket demonico</button>
+                <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-dos">Quiero el ticket demoníaco</button>
     
                 <div class="modal fade" id="modal-dos" tabindex="-1" aria-labelledby="modal-dos-titulo" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
@@ -177,7 +177,7 @@
                               </div>
                               <div class="form-content">
                                 <div class="_button-wrapper">
-                                  <button class="w-100 btn btn-lg btn-primary mt-2"  type="submit">Comprar ticket demoniaco</button>
+                                  <button class="w-100 btn btn-lg btn-primary mt-2"  type="submit">Comprar ticket demoníaco</button>
                                 </div>
                               </div>
                             </div>
