--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Made In Iron Metal Fest XII • Spectral Tales</title>
-  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
@@ -258,6 +257,8 @@
     </footer>
     </section>
   
+<script src="js/blur.js"></script>
+
     <script>  
         $(document).ready(function () {
           // Cuando se hace clic en el botón para abrir el primer modal
@@ -286,6 +287,14 @@
         $('#modal-dos').modal('show');
       });
     });
+
+    $(document).ready(function() {
+    $('.modal-backdrop').blurjs({
+      source: 'body',
+      radius: 7,
+      overlay: 'rgba(255,255,255,0.4)'
+    });
+  });
 
     </script>
 </body>
