--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
                       <div class="modal-header text-center">
-                       Introduce tus datos de contacto
+                        <h6>Introduce tus datos de contacto</h6>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
@@ -143,7 +143,7 @@
                     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                       <div class="modal-content">
                         <div class="modal-header text-center">
-                         Introduce tus datos de contacto
+                         <h6>Introduce tus datos de contacto</h6>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
