--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3">
-                <h4 class="my-0 fw-normal">Ticket Estandar</h4>
+                <h4 class="my-0 fw-normal">Ticket Estándar</h4>
               </div>
               <div class="card-body">
                 <h3 class="card-title pricing-card-title">$165.000<small class="text-muted fw-light">/ticket</small></h3>
@@ -66,7 +66,7 @@
                   <li>(1) CD compilado bandas del festival</li>
                   <li style="color:#060908;"> <span style="display: none;">_</span></li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modal-uno">Quiero el ticket estandar</button>
+                <button type="button" class="w-100 btn btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modal-uno">Quiero el ticket estándar</button>
                 <div class="modal fade" id="modal-uno" tabindex="-1" aria-labelledby="modal-uno-titulo" aria-hidden="true">
                   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
@@ -104,7 +104,7 @@
                             </div>
                             <div class="form-content">
                               <div class="_button-wrapper">
-                                <button class="w-100 btn btn-lg btn-primary mt-2"  type="submit">Comprar estandar</button>
+                                <button class="w-100 btn btn-lg btn-primary mt-2"  type="submit">Comprar ticket estándar</button>
                               </div>
                             </div>
                           </div>
