--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </details>
         
           <details class="pb-3">
-            <summary class="pb-2">¿Dondé es el punto de transporte?</summary>
+            <summary class="pb-2">¿Dónde es el punto de transporte?</summary>
             Cerca de la estación Transmilenio de San Mateo en Bogotá, Colombia. La información de hora y punto exacto serán suministradas mediante email y/o Whatsapp
           </details>
         
