Listo GTM con info MVP

--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
   <meta property="og:description" content="Prepárate para el festival de metal más épico del año! Made In Iron Metal Fest XII te espera con un cartel de 16 bandas de metal legendarias y emergentes, camping, piscina y mucho más en Chinauta, Colombia. Compra tus entradas ahora" />
   <meta property="og:url" content="https://spectraltales.co/" />
   <meta property="og:image" content="https://malditogenio.github.io/spectral-tales-event-promo/images/og-spectral-party-metal.png" />
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5QX8QNT');</script>
+
 </head>
 <body>
-  <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5QX8QNT"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
     <main id="hero">  
       <header>
           <nav>
