Listo para producción el MVP

--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-
-  
-
-
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
   <meta name="theme-color" content="#000"/>
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Made In Iron Metal Fest XII • Spectral Tales" />
   <meta property="og:description" content="Prepárate para el festival de metal más épico del año! Made In Iron Metal Fest XII te espera con un cartel de 16 bandas de metal legendarias y emergentes, camping, piscina y mucho más en Chinauta, Colombia. Compra tus entradas ahora" />
   <meta property="og:url" content="https://spectraltales.co/" />
-  <meta property="og:image" content="https://malditogenio.github.io/spectral-tales-event-promo/images/og-spectral-party-metal.png" />
+  <meta property="og:image" content="https://spectraltales.co/images/og-spectral-party-metal.png" />
   
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -113,7 +109,7 @@
                             <div class="form-content">
                               <div class="form-group">
                                 <label for="phone" class="form-label">Teléfono</label>
-                                <input class="form-control" type="text" id="phone" name="phone" placeholder="Ej: +57 3597099875" required>
+                                <input class="form-control" type="tel" id="phone" name="phone" placeholder="Ej: +57 3597099875" required>
                                 <div class="invalid-feedback">
                                   Por favor, ingrese su número de teléfono.
                                 </div>
@@ -205,7 +201,7 @@
                               <div class="form-content">
                                 <div class="form-group">
                                   <label for="phone" class="form-label">Teléfono</label>
-                                  <input class="form-control" type="text" id="phone" name="phone" placeholder="Ej: +57 3597099875" required>
+                                  <input class="form-control" type="tel" id="phone" name="phone" placeholder="Ej: +57 3597099875" required>
                                   <div class="invalid-feedback">
                                     Por favor, ingrese su número de teléfono.
                                   </div>
@@ -315,5 +311,7 @@
     </footer>
     </section>
     <script src="js/recursos.js"></script>
+    <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/244af77c-66da-4605-8692-d74c3fb489e9-loader.js" ></script>
+
 </body>
 </html>
